--- a/imed/tp1.ipynb
+++ b/imed/tp1.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import pandas\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +89,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5940340df0>]"
+       "[<matplotlib.lines.Line2D at 0x7f114e565f90>]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,28 +171,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mypath=\"./yes/\"\n",
-    "mypath2=\"./no/\"\n",
+    "mypath=\"./dataset/\"\n",
     "\n",
-    "files1 = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
     "\n",
-    "files2 = [f for f in listdir(mypath2) if isfile(join(mypath, f))]\n",
-    "files=files1+files2\n",
+    "files = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
+    "\n",
     "\n",
     "arr=[]\n",
     "for f in files:\n",
-    "    f=cv2.imread(join(mypath,f))\n",
-    "    f=cv2.cvtColor(f, cv2.COLOR_BGR2GRAY)\n",
-    "    f=cv2.resize(f,(400,400))\n",
-    "    #arr.append([split(f,4)])\n",
-    "    regions=split(f,4)\n",
-    "    r=[]\n",
-    "    \n",
-    "    arr.append([histo(regions[i],4) for i in range(4)])\n",
+    "       \n",
+    "        \n",
+    "        file=cv2.imread(join(mypath, f))\n",
+    "        file=cv2.cvtColor(file, cv2.COLOR_BGR2GRAY)\n",
+    "        file=cv2.resize(file,(400,400))\n",
+    "        #arr.append([split(f,4)])\n",
+    "        #regions=split(f,4)\n",
+    "        r=histo(file,4)\n",
+    "        if(f.startswith(\"Y\")):\n",
+    "            r=np.append(r,1)\n",
+    "   \n",
+    "        else:\n",
+    "            r=np.append(r,0)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        arr.append(r)    \n",
+    "           \n",
     "\n",
     "\n",
     "\n",
@@ -205,23 +213,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(155, 4, 4)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[135836  22305   1303    556      0]\n",
+      "[69452 17276 54286 18986     1]\n"
+     ]
     }
    ],
    "source": [
+    "\n",
     "arr=np.array(arr)\n",
-    "arr.shape"
+    "print(arr[0])\n",
+    "np.random.shuffle(arr)\n",
+    "print(arr[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "header = ['i1','i2','i3','i4','label']\n",
+    "\n",
+    "with open('brain.csv', 'w', encoding='UTF8', newline='') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "\n",
+    "    # write the header\n",
+    "    writer.writerow(header)\n",
+    "\n",
+    "    # write multiple rows\n",
+    "    writer.writerows(arr)\n"
    ]
   }
  ],
